--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>PyDelhi • Python Delhi User Group</title>
-
+    <title>Go Students • Golang Community for Students</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple-icon-57x57.png">
+    <!-- <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/assets/images/apple-icon-76x76.png">
@@ -15,26 +15,39 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/images/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/images/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
+    <meta name="theme-color" content="#ffffff"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link href='assets/css/main.css' rel='stylesheet'>
 </head>
+
 <body class="page page-home">
     <section class="intro">
-        <p>Welcome to Python Delhi User Group</p>
-        <h3>PyDelhi</h3>
+        <!--<p>Welcome to Python Delhi User Group</p>-->
+        <h3>We're Go Students</h3>
+        <p>Golang Community for Students</p>
     </section>
-
-    <section class='social-links'>
+    <section class="social-links">
+        <ul>
+            <li>
+                <a href="https://twitter.com/golang_students" target="_blank">Follow Us on Twiiter</a>
+            </li>
+            <li>
+                <a href="https://goo.gl/forms/vbTKhPRPay0YmDNv2" target="_blank">Join us</a>
+            </li>
+        </ul>
+    </section>
+    <div class="community-partners">
+      <img src="assets/images/logo.png" height="250" width="250" />
+    </div>
+    <!-- <section class='social-links'>
       <ul>
         <li>
           <a href="http://bit.ly/pydelhi-intro" target="_blank">About PyDelhi</a>
@@ -94,7 +107,7 @@
       </ul>
     </section>
 
-    <!-- <section class="announcement"><a href="https://conference.pydelhi.org/">PyDelhi Conference</a> 5th March</section> -->
+    <section class="announcement"><a href="https://conference.pydelhi.org/">PyDelhi Conference</a> 5th March</section>
     <div class="section--next_event" data-meetup-group="pydelhi"></div>
 
     <div class="community-partners">
@@ -106,25 +119,60 @@
       <a href="http://scipy2016.scipy.org" target="_blank">
         <img src="assets/images/scipy-conf.png" height="80" width="300"/>
       </a>
-    </div>
+    </div> -->
+    <a href="https://github.com/gostudent/gostudent.github.io" class="github-corner">
+        <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;">
+            <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+            <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+            <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+        </svg>
+    </a>
+    <style>
+    .github-corner:hover .octo-arm {
+        animation: octocat-wave 560ms ease-in-out
+    }
 
+    @keyframes octocat-wave {
+        0%,
+        100% {
+            transform: rotate(0)
+        }
+        20%,
+        60% {
+            transform: rotate(-25deg)
+        }
+        40%,
+        80% {
+            transform: rotate(10deg)
+        }
+    }
 
-    <a href="https://github.com/pydelhi/pydelhi.github.io" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    @media (max-width:500px) {
+        .github-corner:hover .octo-arm {
+            animation: none
+        }
+        .github-corner .octo-arm {
+            animation: octocat-wave 560ms ease-in-out
+        }
+    }
 
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-    $(function(){
-      display_next_event('.section--next_event')
+    $(function() {
+        display_next_event('.section--next_event')
     });
-    </script>
 
+    </script>
     <script type="application/ld+json">
     {
-      "@context": "http://schema.org",
-      "@type": "Organization",
-      "name": "PyDelhi"
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "PyDelhi"
     }
+
     </script>
 </body>
+
 </html>
